# num_in_english

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: auth.py  exceptions.py  schemas.py  tests.py  views.py
djangoProject/: settings.py  urls.py
full_written_numbers/: apps.py  models.py
full_written_numbers/migrations/: 0001_initial.py  0002_englishnumbers_full_writte_number_2d0341_idx.py
full_written_numbers/services/: full_written_numbers.py  test_full_written_numbers.py
