[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["matheuscas <matheus.mcas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
django-ninja = "^0.19.1"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
